--- a/package.json
+++ b/package.json
@@ -1,10 +1,37 @@
 {
   "name": "root",
   "private": true,
+  "type": "module",
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "prepare": "husky install",
+    "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}"
+  },
   "devDependencies": {
-    "lerna": "^6.0.1"
+    "@commitlint/cli": "^17.2.0",
+    "@commitlint/config-conventional": "^17.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.1",
+    "lerna": "^6.0.1",
+    "lint-staged": "^13.0.3",
+    "typescript": "*"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "git add ."
+    ]
+  },
+  "engines": {
+    "npm": "please use yarn",
+    "node": "> 16.0.0",
+    "yarn": ">= 1.22.10"
   }
 }
