chore: publish config

--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,11 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
   "version": "independent",
-  "npmClient": "yarn"
+  "npmClient": "yarn",
+  "command": {
+    "publish": {
+      "message": "release: publish",
+      "registry": "https://npm.pkg.github.com"
+    }
+  }
 }
