--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,5 +22,6 @@
   },
   "bugs": {
     "url": "https://github.com/TickMesh/connect-wallet/issues"
-  }
+  },
+  "gitHead": "fb19ecb4e15c9c6ca6e63bd25c8a3e4cc0d9db78"
 }
