--- a/lerna.json
+++ b/lerna.json
@@ -5,8 +5,7 @@
   "npmClient": "yarn",
   "command": {
     "publish": {
-      "message": "release: publish",
-      "registry": "https://npm.pkg.github.com"
+      "message": "release: publish"
     }
   }
 }
