--- a/packages/aptos/package.json
+++ b/packages/aptos/package.json
@@ -6,6 +6,9 @@
   "homepage": "https://github.com/TickMesh/connect-wallet#readme",
   "license": "ISC",
   "main": "index.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "directories": {
     "lib": "lib",
     "test": "__tests__"
