--- a/packages/eth/package.json
+++ b/packages/eth/package.json
@@ -6,6 +6,9 @@
   "homepage": "https://github.com/TickMesh/connect-wallet#readme",
   "license": "ISC",
   "main": "index.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -26,5 +29,5 @@
   "dependencies": {
     "ethers": "^5.7.2"
   },
-  "gitHead": "c882f088d1bb35edf4a708b9633df7b587b8a0c1"
+  "gitHead": "1c2acf5373ca1a43c20cf68f39297df83b1de8b3"
 }
