--- a/packages/aptos/package.json
+++ b/packages/aptos/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "lybenson <naivebenson@gmail.com>",
   "homepage": "https://github.com/TickMesh/connect-wallet#readme",
-  "license": "ISC",
+  "license": "MIT",
   "main": "index.ts",
   "publishConfig": {
     "access": "public"
