feat: 🎸 aptos sdk

--- a/packages/aptos/package.json
+++ b/packages/aptos/package.json
@@ -5,6 +5,7 @@
   "author": "lybenson <naivebenson@gmail.com>",
   "homepage": "https://github.com/TickMesh/connect-wallet#readme",
   "license": "MIT",
+  "type": "module",
   "main": "index.ts",
   "publishConfig": {
     "access": "public"
