--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
     "prepare": "husky install",
     "lint": "eslint --fix packages/**/*.{js,jsx,ts,tsx}",
     "bootstrap": "lerna bootstrap",
-    "test:aptos": "lerna run test --scope=@tickmesh/aptos"
+    "test:aptos": "lerna run test --scope=@tickmesh/aptos",
+    "test:eth": "lerna run test --scope=@tickmesh/eth",
+    "test": "lerna run test"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.0",
+    "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "chai": "^4.3.7",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
+    "jest": "^29.3.1",
     "lerna": "^6.0.1",
     "lint-staged": "^13.0.3",
-    "mocha": "^10.1.0",
-    "ts-mocha": "^10.0.0",
+    "ts-jest": "^29.0.3",
     "typescript": "*"
   },
   "lint-staged": {
