--- a/packages/aptos/package.json
+++ b/packages/aptos/package.json
@@ -26,7 +26,7 @@
   },
   "gitHead": "142fdfde9ccf04ee9cfc64bf28486868f9e9214a",
   "scripts": {
-    "test": "mocha -r ts-node/register ./__tests__/aptos.test.ts"
+    "test": "jest"
   },
   "dependencies": {
     "aptos": "^1.3.16"
